<resources>
    <string name="app_name">OmdbSearch</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Search by movie title</string>
    <string name="search_type">movie</string>
    <string name="default_poster">http://www.imdb.com/images/nopicture/medium/film.png</string>
    <string name="snackbar_title_not_found">The movie title you entered was not found</string>
    <string name="snackbar_title_empty">Please enter a movie title</string>
    <string name="network_not_available">Network not available! Please connect to the Internet.</string>
    <string name="title">Title</string>
    <string name="example_title">Wreck-It Ralph</string>
    <string name="released">Released</string>
    <string name="example_release">02 Nov 2012</string>
    <string name="runtime">Runtime</string>
    <string name="example_runtime">101 min</string>
    <string name="director">Director</string>
...
